--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -9,7 +9,6 @@
 <a href="https://github.com/ublry267/djy/blob/master/gb/19/12/29/n11752699.md#1">北京女医生遇害细节曝光 遭“拉锯式”割颈</a><br>
 <a href="https://github.com/ublry267/djy/blob/master/gb/19/12/28/n11751864.md#1">内蒙古公安警官枪杀两副局长 当局封口</a><br>
 <br><p><a href="https://github.com/ublry267/djy/blob/master/gb/nscrw413.md#1">更多......</a></p><hr><h2><p><strong>今日评论</strong></p></h2>
-<a href="https://github.com/ublry267/djy/blob/master/gb/20/1/2/n11763884.md#1">周晓辉：川普下通牒 北京纠结三大难题</a><br>
 <a href="https://github.com/ublry267/djy/blob/master/gb/20/1/1/n11761363.md#1">【名家专栏】中共式审查制度正向世界扩散</a><br>
 <a href="https://github.com/ublry267/djy/blob/master/gb/20/1/2/n11762141.md#1">袁斌：中共恐惧的“规模性失业潮”正扑面而来</a><br>
 <a href="https://github.com/ublry267/djy/blob/master/gb/20/1/2/n11761548.md#1">可心：中共侵蚀联合国人权事务的四大手段</a><br>
@@ -22,6 +21,7 @@
 <a href="https://github.com/ublry267/djy/blob/master/gb/20/1/1/n11761144.md#1">王赫：习近平命运之择与三句古语</a><br>
 <a href="https://github.com/ublry267/djy/blob/master/gb/20/1/1/n11760950.md#1">陈思敏：中共证监会带头违法 A股成中产掩埋场</a><br>
 <a href="https://github.com/ublry267/djy/blob/master/gb/19/12/26/n11747470.md#1">为中共效力的红色特工 后来怎么样了（2）</a><br>
+<a href="https://github.com/ublry267/djy/blob/master/gb/20/1/1/n11760402.md#1">陆言：医生被杀案是中共治下恶果的冰山一角</a><br>
 <br><p><a href="https://github.com/ublry267/djy/blob/master/gb/news392.md#1">更多......</a></p><hr><h2><p><strong>独家视角</strong></p></h2>
 <a href="https://github.com/ublry267/djy/blob/master/gb/19/12/23/n11739570.md#1">【2019盘点】时代变革 川普的九记重锤</a><br>
 <a href="https://github.com/ublry267/djy/blob/master/gb/19/12/25/n11743871.md#1">【独家】原大陆医生：我为何远离器官移植</a><br>
@@ -33,6 +33,7 @@
 <a href="https://github.com/ublry267/djy/blob/master/gb/20/1/2/n11763989.md#1">大陆现史上年度最早地方债 1月预超8000亿</a><br>
 <a href="https://github.com/ublry267/djy/blob/master/gb/20/1/2/n11763800.md#1">禁中共黑客盗窃 纳入美中第二阶段贸易谈判</a><br>
 <a href="https://github.com/ublry267/djy/blob/master/gb/20/1/2/n11763530.md#1">【新闻看点】“你被裁了”成热词 中国现失业潮</a><br>
+<a href="https://github.com/ublry267/djy/blob/master/gb/20/1/2/n11763884.md#1">周晓辉：川普下通牒 北京纠结三大难题</a><br>
 <a href="https://github.com/ublry267/djy/blob/master/gb/20/1/2/n11763959.md#1">2020脱贫年 中共多地强制脱贫丑闻百出</a><br>
 <a href="https://github.com/ublry267/djy/blob/master/gb/19/12/5/n11701493.md#1">【思想领袖】中共内部承认正走向解体（一）</a><br>
 <a href="https://github.com/ublry267/djy/blob/master/gb/20/1/2/n11763908.md#1">泼墨女董瑶琼获释出院 神情紧张痴呆</a><br>
@@ -41,7 +42,6 @@
 <a href="https://github.com/ublry267/djy/blob/master/gb/20/1/2/n11761594.md#1">新年谢师恩 德国法轮功学员谈修大法美好</a><br>
 <a href="https://github.com/ublry267/djy/blob/master/gb/20/1/2/n11763775.md#1">打砸店面 破坏者向港警喊“自己人”获放行</a><br>
 <a href="https://github.com/ublry267/djy/blob/master/gb/20/1/2/n11762641.md#1">法轮功学员杨胜军被迫害致死 律师举报控告</a><br>
-<a href="https://github.com/ublry267/djy/blob/master/gb/20/1/2/n11763714.md#1">18国40位政要致信林郑 轰港警节日滥暴</a><br>
 <a href="https://github.com/ublry267/djy/blob/master/gb/20/1/2/n11764071.md#1">华谊老板致员工信责影视团队：失误堪称致命</a><br>
 <a href="https://github.com/ublry267/djy/blob/master/gb/20/1/2/n11763973.md#1">盘点2019美国经济 进入史上最长增长期</a><br>
 <a href="https://github.com/ublry267/djy/blob/master/gb/20/1/2/n11763896.md#1">“一人炼功全家受益”澳洲法轮功学员谢师恩</a><br>
