--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -9,6 +9,8 @@
 <a href="https://github.com/ublry267/djy/blob/master/gb/19/12/29/n11752699.md#1">北京女医生遇害细节曝光 遭“拉锯式”割颈</a><br>
 <a href="https://github.com/ublry267/djy/blob/master/gb/19/12/28/n11751864.md#1">内蒙古公安警官枪杀两副局长 当局封口</a><br>
 <br><p><a href="https://github.com/ublry267/djy/blob/master/gb/nscrw413.md#1">更多......</a></p><hr><h2><p><strong>今日评论</strong></p></h2>
+<a href="https://github.com/ublry267/djy/blob/master/gb/20/1/2/n11764288.md#1">东方觉：犯罪集团之恶与“保护伞”之黑</a><br>
+<a href="https://github.com/ublry267/djy/blob/master/gb/20/1/2/n11763805.md#1">【名家专栏】写在《五月花号公约》400周年</a><br>
 <a href="https://github.com/ublry267/djy/blob/master/gb/20/1/1/n11761363.md#1">【名家专栏】中共式审查制度正向世界扩散</a><br>
 <a href="https://github.com/ublry267/djy/blob/master/gb/20/1/2/n11762141.md#1">袁斌：中共恐惧的“规模性失业潮”正扑面而来</a><br>
 <a href="https://github.com/ublry267/djy/blob/master/gb/20/1/2/n11761548.md#1">可心：中共侵蚀联合国人权事务的四大手段</a><br>
@@ -20,8 +22,6 @@
 <a href="https://github.com/ublry267/djy/blob/master/gb/20/1/1/n11761132.md#1">颜丹：中国“暴力伤医”为何异于全球</a><br>
 <a href="https://github.com/ublry267/djy/blob/master/gb/20/1/1/n11761144.md#1">王赫：习近平命运之择与三句古语</a><br>
 <a href="https://github.com/ublry267/djy/blob/master/gb/20/1/1/n11760950.md#1">陈思敏：中共证监会带头违法 A股成中产掩埋场</a><br>
-<a href="https://github.com/ublry267/djy/blob/master/gb/19/12/26/n11747470.md#1">为中共效力的红色特工 后来怎么样了（2）</a><br>
-<a href="https://github.com/ublry267/djy/blob/master/gb/20/1/1/n11760402.md#1">陆言：医生被杀案是中共治下恶果的冰山一角</a><br>
 <br><p><a href="https://github.com/ublry267/djy/blob/master/gb/news392.md#1">更多......</a></p><hr><h2><p><strong>独家视角</strong></p></h2>
 <a href="https://github.com/ublry267/djy/blob/master/gb/19/12/23/n11739570.md#1">【2019盘点】时代变革 川普的九记重锤</a><br>
 <a href="https://github.com/ublry267/djy/blob/master/gb/19/12/25/n11743871.md#1">【独家】原大陆医生：我为何远离器官移植</a><br>
@@ -93,7 +93,7 @@
 <tr><td VALIGN=TOP width="355"><h2><p><strong>九评共产党</strong></p></h2><a href="https://github.com/ublry267/djy/blob/master/gb/4/11/19/n722529.md#1" target="_blank">【一】评共产党是什么</a><br><a href="https://github.com/ublry267/djy/blob/master/gb/4/11/21/n723946.md#1" target="_blank">【二】评中国共产党是怎样起家的</a><br><a href="https://github.com/ublry267/djy/blob/master/gb/4/11/23/n725597.md#1" target="_blank">【三】评中国共产党的暴政</a><br><a href="https://github.com/ublry267/djy/blob/master/gb/4/11/25/n727814.md#1" target="_blank">【四】评共产党是反宇宙的力量</a><br><a href="https://github.com/ublry267/djy/blob/master/gb/4/11/27/n730058.md#1" target="_blank">【五】评江泽民与中共相互利用迫害法轮功</a><br><a href="https://github.com/ublry267/djy/blob/master/gb/4/11/29/n731667.md#1" target="_blank">【六】评中国共产党破坏民族文化</a><br><a href="https://github.com/ublry267/djy/blob/master/gb/4/12/1/n733806.md#1" target="_blank">【七】评中国共产党的杀人历史</a><br><a href="https://github.com/ublry267/djy/blob/master/gb/4/12/3/n735942.md#1" target="_blank">【八】评中国共产党的邪教本质</a><br><a href="https://github.com/ublry267/djy/blob/master/gb/4/12/4/n737542.md#1" target="_blank">【九】评中国共产党的流氓本性</a></td><td VALIGN=TOP width="352"><h2><p><strong>三退大潮</strong></p></h2><strong>退出中共党、团、队总人数:
 
 ```diff
-- 共 349,124,771 人
+- 共 349,125,136 人
 ```
 </strong>
 <a href="https://github.com/ublry267/djy/blob/master/gb/19/11/19/n11666092.md#1">九评15周年 看大陆民众弃中共 句句真情</a><br>
